# gridfinity-ezcal

./: .gitignore  README.adoc  calipers.py  derivation.nix  flake.nix  parallels.py  parallels.stl  pyproject.toml
