[tool.poetry]
name = "gridfinity-ezcal"
version = "0.1.0"
description = "Box for iGaging EZCAL calipers"
authors = ["Jason Felice <jason.m.felice@gmail.com>"]
license = "UNLICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
build123d = "^0.5.0"
gridfinity-build123d = {git = "https://github.com/Ruudjhuu/gridfinity_build123d.git"}
bd-warehouse = {git = "https://github.com/gumyr/bd_warehouse.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
